Fragile patches for upstream libraries

--- a/VQGAN-CLIP-animations.ipynb
+++ b/VQGAN-CLIP-animations.ipynb
@@ -17,33 +17,36 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Credits"
-      ],
       "metadata": {
         "id": "Credits"
-      }
+      },
+      "source": [
+        "## Credits"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "The VQGAN+CLIP (z+quantize method) notebook this was based on is by Katherine Crowson (https://github.com/crowsonkb, https://twitter.com/RiversHaveWings). The original BigGAN + CLIP method was made by https://twitter.com/advadnoun. Translated into Spanish and added explanations, and modifications by Eleiber#8347, and the friendly interface was made thanks to Abulafia#3734. Translated back into English, and zoom, pan, rotation, and keyframes features by Chigozie Nri (https://github.com/chigozienri, https://twitter.com/chigozienri). Some UI improvements were made by Justin John (https://github.com/justinjohn0306). A linked helper spreadsheet for creating parameter strings is by Kendrick Feller (https://twitter.com/EphemeralInc)"
-      ],
       "metadata": {
         "id": "CJ3-5BCd2CY9"
-      }
+      },
+      "source": [
+        "The VQGAN+CLIP (z+quantize method) notebook this was based on is by Katherine Crowson (https://github.com/crowsonkb, https://twitter.com/RiversHaveWings). The original BigGAN + CLIP method was made by https://twitter.com/advadnoun. Translated into Spanish and added explanations, and modifications by Eleiber#8347, and the friendly interface was made thanks to Abulafia#3734. Translated back into English, and zoom, pan, rotation, and keyframes features by Chigozie Nri (https://github.com/chigozienri, https://twitter.com/chigozienri). Some UI improvements were made by Justin John (https://github.com/justinjohn0306). A linked helper spreadsheet for creating parameter strings is by Kendrick Feller (https://twitter.com/EphemeralInc)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## FAQ"
-      ],
       "metadata": {
         "id": "FAQ"
-      }
+      },
+      "source": [
+        "## FAQ"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "naR-4Vd12oh1"
+      },
       "source": [
         "\n",
         "### Can I make NFTs?\n",
@@ -53,22 +56,22 @@
         "### Too complicated? Want more?\n",
         "\n",
         "If you want a custom animation, features not included here, or anything else, let me know. I might be up for accepting a commission!"
-      ],
-      "metadata": {
-        "id": "naR-4Vd12oh1"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Troubleshooting"
-      ],
       "metadata": {
         "id": "Troubleshooting"
-      }
+      },
+      "source": [
+        "## Troubleshooting"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "9E_i--EF3mdi"
+      },
       "source": [
         "The most common cause of problems is trying to use a resolution that's too high, which uses up too much memory. Unfortunately the amount of memory Google Colab gives is variable depending on the session, so I can't give an exact figure for how high a resolution you can use. If you are having problems though, try reducing the resolution to 400x400 px, and increasing from there.\n",
         "Two gotchas:\n",
@@ -80,22 +83,22 @@
         "### Reporting problems\n",
         "Submit bug reports or feature requests at https://github.com/chigozienri/VQGAN-CLIP-animations/issues\n",
         "or ask me for help on Twitter at https://twitter.com/chigozienri"
-      ],
-      "metadata": {
-        "id": "9E_i--EF3mdi"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## License"
-      ],
       "metadata": {
         "id": "License"
-      }
+      },
+      "source": [
+        "## License"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "fD0e7LXv4OJ9"
+      },
       "source": [
         "\n",
         "This software is licensed under the MIT license\n",
@@ -120,10 +123,7 @@
         "\n",
         "The original notebook upon which this is based is \n",
         "Copyright (c) 2021 Katherine Crowson"
-      ],
-      "metadata": {
-        "id": "fD0e7LXv4OJ9"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -146,12 +146,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 1. Setup"
-      ],
       "metadata": {
         "id": "Setup"
-      }
+      },
+      "source": [
+        "# 1. Setup"
+      ]
     },
     {
       "cell_type": "code",
@@ -190,6 +190,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "shHiUQlarnou"
+      },
+      "outputs": [],
       "source": [
         "#@title 1.1.2 Additional setup for A100\n",
         "#@markdown Running this cell might fix the problem with A100 GPUs being extremely slow. (untested)\n",
@@ -197,13 +203,7 @@
         "  torch.backends.cudnn.enabled = False\n",
         "  print('Finished setup for A100')\n",
         "  "
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "shHiUQlarnou"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -257,7 +257,7 @@
         "!apt install exempi                                       &> /dev/null\n",
         "!pip install python-xmp-toolkit                           &> /dev/null\n",
         "!pip install imgtag                                       &> /dev/null\n",
-        "!pip install pillow==7.1.2                                &> /dev/null\n",
+        "!pip install --upgrade pillow==6.2.2                                &> /dev/null\n",
         " \n",
         "print(\"Installing Python video creation libraries...\")\n",
         "!pip install imageio-ffmpeg &> /dev/null\n",
@@ -277,6 +277,15 @@
         "import ast\n",
         " \n",
         "sys.path.append('./taming-transformers')\n",
+        "\n",
+        "# Very fragile patches for broken upstream libraries\n",
+        "!echo -e \"--- /usr/local/lib/python3.10/dist-packages/torchvision/utils.py\\t2023-10-26 13:36:39.000000000 +0000\\n+++ utils.py\\t2023-10-29 23:19:19.932210049 +0000\\n@@ -8,7 +8,7 @@\\n \\n import numpy as np\\n import torch\\n-from PIL import Image, ImageColor, ImageDraw, ImageFont\\n+from PIL import Image, ImageColor, ImageDraw\\n \\n __all__ = [\\n     \\\"make_grid\\\",\\n\" > /tmp/patch\n",
+        "!patch /usr/local/lib/python3.10/dist-packages/torchvision/utils.py /tmp/patch\n",
+        "!rm /tmp/patch\n",
+        "\n",
+        "!echo -e \"--- /content/./taming-transformers/taming/data/utils.py\\t2023-10-29 23:42:31.515722459 +0000\\n+++ ./tamingdatautils.py\\t2023-10-29 23:26:28.773101350 +0000\\n@@ -8,7 +8,6 @@\\n import numpy as np\\n import torch\\n from taming.data.helper_types import Annotation\\n-from torch._six import string_classes\\n from torch.utils.data._utils.collate import np_str_obj_array_pattern, default_collate_err_msg_format\\n from tqdm import tqdm\\n \\n@@ -149,7 +148,7 @@\\n         return torch.tensor(batch, dtype=torch.float64)\\n     elif isinstance(elem, int):\\n         return torch.tensor(batch)\\n-    elif isinstance(elem, string_classes):\\n+    elif isinstance(elem, str):\\n         return batch\\n     elif isinstance(elem, collections.abc.Mapping):\\n         return {key: custom_collate([d[key] for d in batch]) for key in elem}\\n\" > /tmp/patch\n",
+        "!patch /content/./taming-transformers/taming/data/utils.py /tmp/patch\n",
+        "!rm /tmp/patch\n",
         "\n",
         "# Some models include transformers, others need explicit pip install\n",
         "try:\n",
@@ -470,21 +479,21 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 2. Model settings"
-      ],
       "metadata": {
         "id": "uhYu7Y5X7Kaz"
-      }
+      },
+      "source": [
+        "# 2. Model settings"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Instructions for setting parameters"
-      ],
       "metadata": {
         "id": "Instructions"
-      }
+      },
+      "source": [
+        "## Instructions for setting parameters"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -562,20 +571,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 2.1 Change parameters"
-      ],
       "metadata": {
         "id": "s2sl2u2z7h_k"
-      }
+      },
+      "source": [
+        "# 2.1 Change parameters"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "cellView": "form",
         "id": "ZdlpRFL8UAlW",
-        "scrolled": true,
-        "cellView": "form"
+        "scrolled": true
       },
       "outputs": [],
       "source": [
@@ -978,22 +987,22 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ofZJJTSde7WE"
+      },
       "source": [
         "## Where did the curve editor go?\n",
         "The visual curve editor has been moved to https://keyframe-string-generator.glitch.me/"
-      ],
-      "metadata": {
-        "id": "ofZJJTSde7WE"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 3. Generate Frames"
-      ],
       "metadata": {
         "id": "f9J2g8jN79yG"
-      }
+      },
+      "source": [
+        "# 3. Generate Frames"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1021,19 +1030,19 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 3.2 Run!"
-      ],
       "metadata": {
         "id": "wR5UGTwt8Nwa"
-      }
+      },
+      "source": [
+        "## 3.2 Run!"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "g7EDme5RYCrt",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "g7EDme5RYCrt"
       },
       "outputs": [],
       "source": [
@@ -1280,12 +1289,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 4. Post-processing"
-      ],
       "metadata": {
         "id": "Q4THDfFg9NL4"
-      }
+      },
+      "source": [
+        "# 4. Post-processing"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1312,8 +1321,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "1iwOrcDbtndh",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "1iwOrcDbtndh"
       },
       "outputs": [],
       "source": [
@@ -1374,8 +1383,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "mFo5vz0UYBrF",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "mFo5vz0UYBrF"
       },
       "outputs": [],
       "source": [
@@ -1456,8 +1465,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "E8lvN6b0mb-b",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "E8lvN6b0mb-b"
       },
       "outputs": [],
       "source": [
@@ -1628,7 +1637,15 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "collapsed_sections": ["Credits", "FAQ", "Troubleshooting", "License", "Setup", "Instructions", "Remove"],
+      "collapsed_sections": [
+        "Credits",
+        "FAQ",
+        "Troubleshooting",
+        "License",
+        "Setup",
+        "Instructions",
+        "Remove"
+      ],
       "machine_shape": "hm",
       "name": "VQGAN-CLIP-animations.ipynb",
       "provenance": []
