Update keyframe editor URLs

--- a/VQGAN-CLIP-animations.ipynb
+++ b/VQGAN-CLIP-animations.ipynb
@@ -503,7 +503,7 @@
       "source": [
         "If you want to create an animation with lots of keyframes, try out this spreadsheet by @EphemeralInc for constructing the strings: https://docs.google.com/spreadsheets/d/1sJ0PMHUPIYkS7LSxhzTThEP7rZ5CFonz-dBxqe8F2uc.\n",
         "\n",
-        "You can also try https://keyframe-string-generator.glitch.me/ or https://audio-keyframe-generator.glitch.me/ to construct strings using a visual editor, or an audio file.\n",
+        "You can also try https://www.chigozie.co.uk/keyframe-string-generator/ or https://www.chigozie.co.uk/audio-keyframe-generator/ to construct strings using a visual editor, or an audio file.\n",
         "\n",
         "| Parameter  |  Usage |\n",
         "|---|---|\n",
