Update reporting problems section to show no longer maintained

--- a/VQGAN-CLIP-animations.ipynb
+++ b/VQGAN-CLIP-animations.ipynb
@@ -56,8 +56,8 @@
         "If you still have problems, then:\n",
         "\n",
         "### Reporting problems\n",
-        "Submit bug reports or feature requests at https://github.com/chigozienri/VQGAN-CLIP-animations/issues\n",
-        "or ask me for help on Twitter at https://twitter.com/chigozienri"
+        "This software is no longer actively supported; upstream libraries can and will break. You can sumbit bug reports at https://github.com/chigozienri/VQGAN-CLIP-animations/issues\n",
+        "or ask me for help on Twitter at https://twitter.com/chigozienri, but there is no longer any expectation that anything will happen."
       ]
     },
     {
